--- a/quiz_game.css
+++ b/quiz_game.css
@@ -1,43 +1,37 @@
 div, header, main, section{
     border: 1px black solid;
 }
-
 body{
     margin: 0;
-
 }
-
 .container{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    /* height: 100vh; */
 }
-
 .nav{
     display: flex;
     justify-content: space-between;
     align-content: center;
-    height: 50px;
+    height: 100px;
 }
-
 #highscore,
 #timer{
     width: 50%;
+    text-align: center;
+    font-size: 1.75em;
+}
+hr{
+    width: 100px;
+    margin: 5px auto;
 }
 .quizBox{
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: center;
 }
-
 #question{
-    margin: 0 auto;
-    max-width: 80%;
+    margin: 20px auto;
     max-height: 500px;
     border: 5px purple solid;
     line-height: 1.5em;
@@ -48,11 +42,10 @@ body{
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    max-width: 80%;
-    margin: 0 auto;
     border: 5px orange solid;    
 }
 .button{
     background: green;
     font-size: 1.5em;
+    margin: 5px;
 }
