--- a/quiz_game.css
+++ b/quiz_game.css
@@ -5,14 +5,16 @@ body{
     margin: 0;
 }
 .container{
-    width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
+    position: relative;
 }
 .nav{
     display: flex;
     justify-content: space-between;
     align-content: center;
-    height: 100px;
+    /* height: 10%; */
+    max-height: 100px;
+    z-index: 1;
 }
 #highscore,
 #timer{
@@ -25,24 +27,26 @@ hr{
     margin: 5px auto;
 }
 .quizBox{
+    height: 100%;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-content: center;
+    top: 0px;
 }
 #question{
-    margin: 20px auto;
+    margin: 120px auto;
     max-height: 500px;
     border: 5px purple solid;
     line-height: 1.5em;
     font-size: 1.2em;
 }
 #answers{
+    border: 5px orange solid;    
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    border: 5px orange solid;    
 }
 .button{
     background: green;
