--- a/quiz_game.css
+++ b/quiz_game.css
@@ -1,6 +1,9 @@
 div, header, main, section{
     border: 1px black solid;
 }
+*{
+    box-sizing: border-box;
+}
 body{
     margin: 0;
 }
@@ -31,25 +34,39 @@ hr{
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-content: center;
     top: 0px;
 }
 #question{
-    margin: 120px auto;
-    max-height: 500px;
+    margin-top: 120px;
+    height: 400px;
     border: 5px purple solid;
     line-height: 1.5em;
     font-size: 1.2em;
 }
 #answers{
+    width: 100%;
     border: 5px orange solid;    
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
 }
+
 .button{
     background: green;
     font-size: 1.5em;
     margin: 5px;
+}
+
+@media only screen and (min-width: 768px){
+    #question,
+    #answers{
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+    }
+    .quizBox{
+        justify-content: flex-start;
+    }
 }
