--- a/quiz_game.css
+++ b/quiz_game.css
@@ -31,6 +31,7 @@ hr{
 }
 .quizBox{
     height: 100%;
+    width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -41,6 +42,7 @@ hr{
 #question{
     margin-top: 120px;
     height: 400px;
+    width: 100%;
     border: 5px purple solid;
     line-height: 1.5em;
     font-size: 1.2em;
