--- a/quiz_game.css
+++ b/quiz_game.css
@@ -62,6 +62,9 @@ hr{
     font-size: 1.5em;
     margin: 5px;
 }
+.wrong{
+    background: red;
+}
 
 @media only screen and (min-width: 768px){
     #question,
